--- a/pom.xml
+++ b/pom.xml
@@ -12,25 +12,9 @@
 		</dependency>
   </dependencies>
   <build>
-  <finalName>admindashboard</finalName>
-    <sourceDirectory>src</sourceDirectory>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
-        <configuration>
-          <release>12</release>
-        </configuration>
-      </plugin>
-      
-      <plugin>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>3.2.3</version>
-        <configuration>
-          <warSourceDirectory>WebContent</warSourceDirectory>
-        </configuration>
-      </plugin>
-      <plugin>
+		<finalName>admindashboard18</finalName>
+		<plugins>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
 				<version>2.3</version>
@@ -53,8 +37,8 @@
 					</execution>
 				</executions>
 			</plugin>
-    </plugins>
-    
-  </build>
+
+		</plugins>
+	</build>
   
 </project>
