--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>AdminDashboard</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>simplewebapp Maven Webapp</name>
+	<name>AdminDashboard Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
 		<dependency>
@@ -40,7 +40,7 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<finalName>simplewebapp</finalName>
+		<finalName>AdminDashboard</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
