--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,14 @@
 		<finalName>AdminDashboard</finalName>
 		<plugins>
 			<plugin>
+			<artifactId>maven-war-plugin</artifactId>
+			    <version>2.1.1</version>
+			    <extensions>false</extensions>
+			    <configuration>
+				<failOnMissingWebXml>false</failOnMissingWebXml>
+			    </configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
 				<version>2.3</version>
